--- a/algorithms/Algorithms.ipynb
+++ b/algorithms/Algorithms.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Расчёт коэффициентов множественной регрессии"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -533,11 +540,143 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Is Symmetrical?\n",
+    "Find if a given array of coordinates has a verical symmetry axis."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "inp = [(1, 2), (2, 7), (8, 12), (1, 1), (0, 1), (2, 5), (2, 1), (3, 1)]\n",
+    "inp2 = [(1, 1)]\n",
+    "inp3 = [(1,1), (3,1), (1,3), (3,3)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def is_symmetrical(inp):\n",
+    "    if len(inp) == 1:\n",
+    "        return True\n",
+    "    else:\n",
+    "        inp = sorted(inp)\n",
+    "        modif = dict()\n",
+    "        \n",
+    "        for element in inp:\n",
+    "            if element[1] in modif.keys():\n",
+    "                a = modif[element[1]]\n",
+    "                a.append(element[0])\n",
+    "                modif[element[1]] = a\n",
+    "            else:\n",
+    "                modif[element[1]] = [element[0]]\n",
+    "        print(modif)\n",
+    "        \n",
+    "        sym = None\n",
+    "        \n",
+    "        for element in modif.keys():\n",
+    "            if len(modif[element]) % 2 != 0:\n",
+    "                return False\n",
+    "            else:\n",
+    "                a = modif[element]\n",
+    "                \n",
+    "                while len(a) > 0:\n",
+    "                    if sym == None:\n",
+    "                        sym = (a[0] + a[-1]) / 2\n",
+    "                        a = a[1:-1]\n",
+    "                        continue\n",
+    "                    else:\n",
+    "                        if sym == (a[0] + a[-1]) / 2:\n",
+    "                            a = a[1:-1]\n",
+    "                            continue\n",
+    "                        else:\n",
+    "                            return False\n",
+    "        else:\n",
+    "            return True\n",
+    "                    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: [0, 1, 2, 3], 2: [1], 5: [2], 7: [2], 12: [8]}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "is_symmetrical(inp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "is_symmetrical(inp2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: [1, 3], 3: [1, 3]}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "is_symmetrical(inp3)"
+   ]
   }
  ],
  "metadata": {
